# rna-map-mini

./: .gitignore  PARAMETERS.md  README.md  pyproject.toml  setup.py
cpp/src/: bindings.cpp
rna_map_mini/: __init__.py  exception.py  mutation_histogram.py  settings.py
rna_map_mini/analysis/: bit_vector_iterator.py  mutation_histogram.py
rna_map_mini/core/: __init__.py  aligned_read.py  bit_vector.py  config.py  results.py
rna_map_mini/io/: __init__.py  bit_vector_storage.py  csv.py  fasta.py  sam.py  validation.py
rna_map_mini/pipeline/: __init__.py  _cpp_bit_vectors.py  bit_vector_cpp.py  bit_vector_generator.py  functions.py
rna_map_mini/visualization/: plots.py
tests/: conftest.py  test_all_implementations_comparison.py  test_bit_vector.py  test_bit_vector_cpp.py  test_config.py  test_detailed_implementation_comparison.py  test_external_cmd.py  test_logging.py  test_mutation_histogram.py  test_results.py  test_run.py  test_sam.py  test_storage_format_performance.py
